--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sagar-shrivastava-portfolio",
   "version": "0.1.0",
-  "homepage": "https://github.com/Sagar8085",
+  "homepage": "https://rishavchanda.github.io",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
